# monster-diffusion

./: .gitignore  README.md  guild.yml  pyproject.toml  pytest.ini  update_splits.py
data/: __init__.py  datasets.py  example.py  replace_background.py  train_datastream.py
monster_diffusion/: __init__.py  download_model.py  generate_cheat_samples.py  generate_samples.py  kl_weight_controller.py  log_examples.py  metrics.py  settings.py  temporary_cheat_samples.py  temporary_samples.py
monster_diffusion/data/: datasets.py  evaluate_datastreams.py  example.py  nonleaky_augmenter.py  pad_to_fixed_size.py  train_datastream.py
monster_diffusion/model/: __init__.py  diffusion.py  ema.py  model.py  prediction.py  pseudo_linear_sampler.py
monster_diffusion/model/ddpm/: config.py  ddpm.py  layers.py
monster_diffusion/model/imagen/: __init__.py  imagen_unet.py
monster_diffusion/model/k_diffusion/: layers.py  model.py  utils.py
monster_diffusion/model/unet/: __init__.py  fp16_util.py  nn.py  unet.py
monster_diffusion/model/variational_encoder/: __init__.py  clamp_with_grad.py  decoder_cell.py  encoder_cell.py  ldm.py  normalize.py  squeeze_excitation.py  swish.py  variational_encoder.py  variational_features.py
monster_diffusion/splits/: splits.json
monster_diffusion/tools/: __init__.py  guild_run.py  inverse_lr.py  seeded_randn.py  unzip.py
operations/: baseline_fid.py  evaluate.py  prepare_fid.py  search_lr.py  swa.py  train.py
operations/debug/: train.py
